# semester-project

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0a12f47293e2_changed_w_and_h_type.py  1d8a3b0aed1d_created_pictures_table.py  52f6ec98ae5f_added_all_the_tables.py  5ad6940b7854_added_product_description.py  6902f87f2287_added_basic_tables.py  78c9022c0355_added_product_title.py  7c2c38a7a103_added_painting_table.py  7fd91dcfb670_created_enums.py  a101c86fa4d5_added_orders.py  cdaed2cefea6_add_currency_field.py  cfa8500ccb3d_created_tables.py  db97549ba2c6_added_users_table.py  fb6abff73f8f_replaced_int_type_with_float.py
backend/: application.py  config.py  main.py
backend/api/: tags_metadata.py
backend/api/crud/: cart_items.py
backend/api/dependencies/: api_key.py  carts.py  db.py  nova.py  scope.py
backend/api/routers/: __init__.py  auth.py  carts.py  meest.py  nova.py  (+9 more)
backend/databases/: pg_manager.py  redis_manager.py
backend/models/: __init__.py  base.py  cart.py  cart_item.py  order.py  order_item.py  painting.py  perfume.py  picture.py  product.py  product_base.py  user.py
backend/schemas/: __init__.py  painting.py  perfume.py  picture.py  product.py  product_base.py  user.py
backend/services/: __init__.py  nova.py  photo.py  token.py
backend/utils/: __init__.py  http_client.py  logger.py  nova.py  password.py  shipping_http_client.py  token.py
frontend/: .gitignore  api.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  config.js  index.css
scripts/: pg_update.py
(+59 files in other folders)
